# manybodysim

./: .cursorrules  Brainstorming.md  PERFORMANCE_TODO.md  README.md  pyproject.toml
configs/: base.yaml
configs/scenarios/: template.yaml
src/mbsim/: __init__.py  config.py  config_loader.py  simulate.py  types.py
src/mbsim/analysis/: __init__.py  metrics.py  timeseries.py
src/mbsim/forces/: accel.py  accel_fns.py  force_models.py
src/mbsim/geometry/: boundary.py
src/mbsim/integrators/: __init__.py  integrators.py
src/mbsim/simulation/: engine.py  runner.py
src/mbsim/state/: particles.py  universe.py
src/mbsim/ui/: __init__.py  actions.py  controls.py  interaction.py  state.py
src/mbsim/viz/: __init__.py  plots.py  scene2d.py  style.py
ui/: app.py
